# lux

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  lux.toml  release-plz.toml
.cargo/: config.toml
.config/: hakari.toml
.github/: dependabot.yml
.github/workflows/: binaries.yml  cd-binstall.yml  cd.yml  continuous-deployment.yml  docker-publish.yml  integration-msvc.yml  integration-tests.yml  integration-windows.yml  nix-build.yml  release-plz.yml  tests-msvc.yml  tests.yml  update-flake-lock.yml
.lux/: .gitignore
docker/: build.sh  build2.sh  builder.Dockerfile  common.Dockerfile  lua51.Dockerfile  postBuild.Dockerfile
docker/test/: Dockerfile  lux.toml
lux-cli/: Cargo.toml
lux-cli/resources/test/sample-project-init/: .gitignore  lux.toml
lux-cli/src/: add.rs  build.rs  check.rs  doc.rs  download.rs  exec.rs  fetch.rs  format.rs  generate_rockspec.rs  info.rs  install.rs  install_lua.rs  install_rockspec.rs  lib.rs  lint.rs  list.rs  outdated.rs  pack.rs  pin.rs  purge.rs  remove.rs  run.rs  run_lua.rs  search.rs  shell.rs  uninstall.rs  unpack.rs  update.rs  upload.rs
lux-cli/src/project/: files.rs  mod.rs  new.rs
lux-cli/src/utils/: install.rs  project.rs
lux-lib/: Cargo.toml
lux-lib/resources/test/: luyoga-1.3-3.rockspec
lux-lib/resources/test/sample-project-busted-nlua/: lux.toml
lux-lib/resources/test/sample-project-no-source/: lux.toml
lux-lib/resources/test/sample-projects/no-source/: bar.toml  lux.toml
lux-lib/src/: lib.rs  merge.rs  path.rs  progress.rs
lux-lib/src/config/: mod.rs  rock_layout.rs  tree.rs
lux-lib/src/git/: utils.rs
lux-lib/src/lockfile/: mod.rs
lux-lib/src/lua_installation/: mod.rs
lux-lib/src/lua_rockspec/: dependency.rs  deploy.rs  mod.rs  partial.rs  platform.rs  rock_source.rs  test_spec.rs
lux-lib/src/luarc/: mod.rs
lux-lib/src/luarocks/: install_binary_rock.rs  luarocks_installation.rs
lux-lib/src/manifest/: mod.rs
lux-lib/src/operations/: build_lua.rs  build_project.rs  download.rs  exec.rs  fetch.rs  gen_luarc.rs  install.rs  install_spec.rs  mod.rs  pack.rs  pin.rs  remove.rs  resolve.rs  run.rs  run_lua.rs  sync.rs  test.rs  uninstall.rs  unpack.rs  update.rs
lux-lib/src/operations/install/: mod.rs
lux-lib/src/package/: mod.rs  version.rs
lux-lib/src/project/: gen.rs  mod.rs  project_toml.rs
lux-lib/src/remote_package_db/: mod.rs
lux-lib/src/rockspec/: mod.rs
lux-lib/src/tree/: mod.rs
lux-lib/src/upload/: mod.rs
lux-lib/src/which/: mod.rs
lux-lib/tests/: build.rs  build_lua.rs  exec.rs  install.rs  luarocks_installation.rs  sync.rs  test.rs  tree.rs
lux-lua/: Cargo.toml
lux-lua/src/: config.rs  lib.rs  loader.rs  operations.rs
lux-workspace-hack/: Cargo.toml
nix/: docker.nix  overlay.nix
xtask/: Cargo.toml
xtask-lua/: Cargo.toml
xtask-lua/src/: lib.rs  main.rs
xtask/src/: main.rs
