[workspace]
members = [
  "lux-lib",
  "lux-cli",
  "lux-lua",
  "lux-workspace-hack",
  "xtask",
  "xtask-lua",
]
default-members = ["lux-cli", "lux-lib"]
resolver = "2"

[workspace.package]
version = "0.17.1"

[workspace.dependencies]
git-url-parse = "0.4"
git2 = "0.20"
ignore = "0.4"
indicatif = "0.18"
itertools = "0.14"
lux-workspace-hack = { version = "0.1", path = "./lux-workspace-hack" }
mlua = { version = "0.10", features = [
  "serialize",
  "macros",
  "error-send",
  "async",
] }
path-absolutize = "3.1"
path-slash = "0.2"
pathdiff = "0.2"
serde_json = { version = "1.0", features = ["preserve_order"] }
strum = { version = "0.27" }
strum_macros = "0.27"
stylua = { version = "2.1", features = ["fromstr", "lua52"] }
target-lexicon = "0.13"
tempdir = "0.3"
toml = "0.9"
tokio = { version = "1.47", features = ["full"] }
walkdir = "2.5"
which = "8.0"

[profile.release]
lto = true
codegen-units = 1
