[package]
name = "lux-cli"
version.workspace = true
description = "A luxurious package manager for Lua"
authors = ["vhyrro <vhyrro@gmail.com>", "mrcjkb <marc@jakobi.dev>"]
homepage = "https://github.com/nvim-neorocks/lux"
repository = "https://github.com/nvim-neorocks/lux"
license = "LGPL-3.0+"
readme = "../README.md"
keywords = ["lua", "luarocks", "neovim", "packagemanager", "build"]
categories = ["development-tools", "command-line-utilities"]
edition = "2021"

[[bin]]
name = "lx"
test = false
bench = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
edit = "0.1"
eyre = "0.6"
inquire = "0.7"
nucleo = "0.5"
octocrab = "0.44"
open = "5.3"
spdx = "0.11"
spinners = "4.1"
termcolor = "1.4"
termtree = "0.5"
text_trees = "0.1"
url = "2.5"
whoami = "1.6"

git-url-parse = { workspace = true }
git2 = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
lux-workspace-hack = { workspace = true }
path-absolutize = { workspace = true }
path-slash = { workspace = true }
pathdiff = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
stylua = { workspace = true }
tempdir = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
emmylua_check = { version = "0.11", features = [] }

[dev-dependencies]
serial_test = { version = "3.2" }
assert_fs = "1.1"

[dependencies.lux-lib]
version = "0.21.1"
path = "../lux-lib/"
features = ["clap"]

[features]
default = ["lua54"]
lua51 = ["lux-lib/lua51"]
lua52 = ["lux-lib/lua52"]
lua53 = ["lux-lib/lua53"]
lua54 = ["lux-lib/lua54"]
luajit = ["lux-lib/luajit"]
vendored = ["lux-lib/vendored"]
vendored-lua = ["lux-lib/vendored-lua"]
