[package]

name = "lux-lib"
version = "0.23.1"
description = "Library for the lux package manager for Lua"
authors = ["vhyrro <vhyrro@gmail.com>", "mrcjkb <marc@jakobi.dev>"]
repository = "https://github.com/nvim-neorocks/lux"
homepage = "https://nvim-neorocks.github.io"
license = "LGPL-3.0+"
readme = "../README.md"
keywords = ["lua", "luarocks", "neovim", "packagemanager", "build"]
categories = ["development-tools"]
exclude = ["tests/**", "resources/test/**"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1"
bon = { version = "3.7", features = ["implied-bounds"] }
bytes = "1.10"
cc = { version = "1.2", features = ["parallel"] }
chumsky = "0.10"
clap = { version = "4.5", features = ["derive"], optional = true }
clean-path = "0.2"
diffy = "0.4"
directories = "6.0"
flate2 = "1.1"
fs_extra = "1.3"
futures = "0.3"
hex = { version = "0.4" }
html-escape = "0.2"
httpdate = "1.0"
infer = "0.19"
is_executable = "1.0"
lazy_static = "1.5"
lets_find_up = "0.0"
md5 = "0.8"
nix-nar = "0.3"
nonempty = { version = "0.12", features = ["serialize"] }
openssl = "0.10"
pkg-config = "0.3"
remove_dir_all = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-enum-str = "0.4"
sha2 = "0.10"
shell-words = "1.1"
shlex = "1.3"
ssri = "9.2"
tar = "0.4"
thiserror = "2.0"
toml_edit = "0.23"
tree-sitter = "0.25"
tree-sitter-config = "0.25"
tree-sitter-generate = "0.25"
tree-sitter-loader = "0.25"
url = "2.5"
vfs = "0.12"
zip = "4.5"

git-url-parse = { workspace = true }
git2 = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
lux-workspace-hack = { workspace = true }
mlua = { workspace = true }
path-slash = { workspace = true }
pathdiff = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
stylua = { workspace = true }
target-lexicon = { workspace = true }
tempdir = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }


gpgme = { version = "0.11", optional = true }

[dev-dependencies]
httptest = { version = "0.16" }
serial_test = { version = "3.2" }
proptest = "1.7"
dir-diff = "0.3"
insta = { version = "1.43", features = ["redactions", "yaml", "json"] }
assert_fs = "1.1"
predicates = "3.1"

[features]
default = ["lua54"]
clap = ["dep:clap"]
lua = []
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
gpgme = ["dep:gpgme"]
vendored = ["mlua/vendored", "openssl/vendored", "git2/vendored-libgit2"]
vendored-openssl = ["openssl/vendored"]
vendored-libgit2 = ["git2/vendored-libgit2"]
vendored-lua = ["mlua/vendored"]
