[package]
name = "xtask-lua"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lux-workspace-hack = { version = "0.1", path = "../lux-workspace-hack" }
toml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[features] # For lux-lua distribution
default = []
lua51 = []
lua52 = []
lua53 = []
lua54 = []
luajit = []
