[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cargo-packager = { version = "0.11.7", default-features = false, features = ["rustls-tls"] }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
clap_mangen = "0.2.24"
lux-workspace-hack = { version = "0.1", path = "../lux-workspace-hack" }
serde = { version = "1.0.219", default-features = false }

strum = { workspace = true }
toml = { workspace = true }

[dependencies.xtask-lua]
version = "0.1.0"
path = "../xtask-lua/"

# On msvc, we vendor openssl,
# but we don't want to do that when using xtask with nix

[target.'cfg(not(target_env = "msvc"))'.dependencies.lux-cli]
path = "../lux-cli"
features = ["vendored-lua"]

[target.'cfg(target_env = "msvc")'.dependencies.lux-cli]
path = "../lux-cli"
features = ["vendored"]
